--- a/src/shared/ui/Card/Card.module.css
+++ b/src/shared/ui/Card/Card.module.css
@@ -22,8 +22,7 @@
 
 .content {
   display: flex;
-  flex-direction: column;
-  gap: 24px;
+  flex-direction: column; 
   border-radius: 12px;
 }
 
